<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#012B31">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="234dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:layout_marginBottom="291dp"
        android:background="#012B31"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img1"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:background="#00D4FAF2"
        android:ems="10"
        android:text="Login as Renter"
        android:textAlignment="center"
        android:textSize="25sp"
        android:fontFamily="@font/coda"
        android:textColor="#85D7FC"
        android:gravity="center_horizontal" />


    <EditText
        android:id="@+id/editText"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="330dp"
        android:padding="5dp"
        android:background="#01505E"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#eee"
        android:importantForAutofill="no"
        android:drawableStart="@drawable/ic_person_black_24dp" />

    <EditText
        android:id="@+id/editText2"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="380dp"
        android:padding="5dp"
        android:background="#01505E"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#eee"
        android:importantForAutofill="no"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp" />


    <androidx.cardview.widget.CardView
        android:layout_width="114dp"
        android:layout_height="30dp"
        app:cardBackgroundColor="#54C1EB"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp">

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#54C1EB"
            android:ems="10"
            android:layout_gravity="center"
            android:text="Login"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="#00D4FAF2"
        android:ems="10"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:text="New user? Create account!"
        android:textAlignment="center"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:background="#00D4FAF2"
        android:ems="10"
        android:gravity="center_horizontal"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#85D7FC"
        android:textSize="14sp" />
    <ImageButton
        android:id="@+id/home"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:layout_alignParentBottom="true"
        android:ems="10"
        android:gravity="center_horizontal"
        android:background="@drawable/ic_baseline_home_24"
        android:contentDescription="HOME" />
    <TextView
        android:id="@+id/text4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="85dp"
        android:background="#00D4FAF2"
        android:ems="10"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:text="Back to Home!"
        android:textAlignment="center"
        android:textSize="14sp" />

</RelativeLayout >