<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#012D31">


<ImageView
    android:id="@+id/imageView"
    android:layout_width="259dp"
    android:layout_height="234dp"
    android:layout_marginStart="80dp"
    android:layout_marginLeft="80dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="85dp"
    android:layout_marginRight="85dp"
    android:layout_marginBottom="291dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/img1"
    android:contentDescription="@string/logo" />

<TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="200dp"
    android:background="#00D4FAF2"
    android:ems="10"
    android:text="Sign up Wizard"
    android:textAlignment="center"
    android:textSize="25sp"
    android:textColor="#85D7FC"
    android:fontFamily="@font/coda"
    android:gravity="center_horizontal" />


<EditText
    android:id="@+id/editText"
    android:drawableLeft="@drawable/ic_person_black_24dp"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="330dp"
    android:padding="5dp"
    android:background="#01505E"
    android:ems="10"
    android:hint="@string/enter_e_mail_id"
    android:inputType="textPersonName"
    android:textColor="#eee"
    android:importantForAutofill="no"
    android:drawableStart="@drawable/ic_person_black_24dp" />

<EditText
    android:id="@+id/editText2"
    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="380dp"
    android:padding="5dp"
    android:background="#01505E"
    android:ems="10"
    android:hint="@string/enter_password"
    android:inputType="textPassword"
    android:textColor="#eee"
    android:importantForAutofill="no"
    android:drawableStart="@drawable/ic_lock_outline_black_24dp" />

<androidx.cardview.widget.CardView
    android:layout_width="114dp"
    android:layout_height="30dp"
    app:cardBackgroundColor="#54C1EB"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="450dp">

    <Button
        android:id="@+id/cregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#54C1EB"
        android:ems="10"
        android:layout_gravity="center"
        android:text="Sign up"/>

</androidx.cardview.widget.CardView>
<TextView
    android:id="@+id/textview3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="630dp"
    android:background="#00D4FAF2"
    android:ems="10"
    android:gravity="center_horizontal"
    android:text="Already have an account?"
    android:textAlignment="center"
    android:textSize="14sp" />

<TextView
    android:id="@+id/sendlogin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="650dp"
    android:background="#00D4FAF2"
    android:ems="10"
    android:gravity="center_horizontal"
    android:text="Login"
    android:textAlignment="center"
    android:textColor="#85D7FC"
    android:textSize="14sp" />

</RelativeLayout >